--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"description": "PHP-FPM implementation that allows to preserve resources (global variables) between requests, so database connections pool is possible",
 	"keywords": ["db-pool"],
 	"homepage": "https://github.com/jeremiah-shaulov/php-web-node",
+	"license": "MIT",
 	"authors":
 	[	{	"name": "Jeremiah Shaulov",
 			"email": "jeremiah-shaulov@gmail.com",
@@ -9,7 +10,7 @@
 		}
 	],
 	"require":
-	{	"php": "^7.4"
+	{	"php": ">=7.4"
 	},
 	"autoload":
 	{	"files": ["php-web-node.php"]
